ajout thml css js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
     
+
+<div>
+    <div id="texteCentral">
+        <input type="text" placeholder="Entrez votre pseudo" id="pseudo">
+        <br>
+        <input type="password" placeholder="Entrez votre mot de passe" id="mdp">
+        <br>
+        <a href="./assets/pages/page1.html"><button onclick="envoyer()">Envoyer</button></a> 
+    </div>
+</div>
+
+<script src="./assets/js/index.js"></script>
+
 </body>
 </html>
