--- a/assets/pages/page1.html
+++ b/assets/pages/page1.html
@@ -18,9 +18,9 @@
 <div>
     <nav>
         <ul class="tableau">
-            <li class="navbar"><a href="">Acceuil</a></li>
-            <li class="navbar"><a href="">Admin</a></li>
-            <li class="navbar"><a href="">Deconnection</a></li>
+            <li><a href="">Acceuil</a></li>
+            <li><a href="">Admin</a></li>
+            <li><a href="">Deconnection</a></li>
         </ul>
     </nav>
 </div>
@@ -50,6 +50,10 @@
 </table>
 
 <a href="../pages/page2.html"><button onclick="envoyer()" classe="envoyer">Envoyer</button></a>
+
+
+<img src="../img/PhotoDuel.jpg" alt="" id="duel"> 
+
 
     <script src="../js/page1.js"></script>
     
