--- a/assets/pages/page2.html
+++ b/assets/pages/page2.html
@@ -11,7 +11,7 @@
     
 
     <header id="titre">
-        <h1>Bienvenue sur le site d'escrime</h1>
+        <h1>Fédération française d'Escrime</h1>
     </header>
 
     <img id="imageFfe" width="200px"  src="../img/ffe.jpg" alt="">
@@ -33,6 +33,8 @@
 
     <ul id="liste">   
     </ul>
+
+    <img src="../img/coqFFE.jpg" alt="" id="coq">
 
 
 <script src="../js/page2.js"></script>
