--- a/assets/pages/page1.html
+++ b/assets/pages/page1.html
@@ -18,9 +18,9 @@
 <div>
     <nav>
         <ul class="tableau">
-            <li><a href="">Acceuil</a></li>
-            <li><a href="">Admin</a></li>
-            <li><a href="">Deconnection</a></li>
+            <li class="btn"><a href="">Acceuil</a></li>
+            <li class="btn"><a href="">Admin</a></li>
+            <li class="btn"><a href="">Deconnection</a></li>
         </ul>
     </nav>
 </div>
@@ -36,11 +36,6 @@
         </tr>
     </thead>
     <tr>
-        <!-- <td><input type="text" placeholder="Entrez votre nom" id="nom"></td>
-        <td><input type="text" placeholder="Entrez votre prénom" id="prenom"></td>
-        <td><input type="text" placeholder="Entrez votre date de naissance" id="date"></td>
-        <td><input type="text" placeholder="Entrez votre sexe" id="sexe"></td>
-        <td><input type="text" placeholder="Entrez votre prescripteur" id="prescripteur"></td> -->
         <td><input type="text" placeholder="Entrez votre nom" class="renseignements"></td>
         <td><input type="text" placeholder="Entrez votre prénom" class="renseignements"></td>
         <td><input type="text" placeholder="Entrez date de naissance" class="renseignements"></td>
@@ -52,8 +47,12 @@
 <a href="../pages/page2.html"><button onclick="envoyer()" classe="envoyer">Envoyer</button></a>
 
 
-<img src="../img/PhotoDuel.jpg" alt="" id="duel"> 
+<img src="../img/PhotoDuel.jpg" alt="" id="duel" width="900px"> 
 
+<footer>
+    <p id="gauche">Sassy & Jérémie Cie</p>
+    <p id="droite">Via 2022</p>
+    </footer>
 
     <script src="../js/page1.js"></script>
     
