--- a/assets/pages/page2.html
+++ b/assets/pages/page2.html
@@ -19,15 +19,15 @@
     <div>
         <nav>
             <ul class="tableau">
-                <li><a href="#">Acceuil</a></li>
-                <li><a href="#">Admin</a></li>
-                <li><a href="#">Deconnection</a></li>
+                <li class="btn"><a href="#">Acceuil</a></li>
+                <li class="btn"><a href="#">Admin</a></li>
+                <li class="btn"><a href="#">Deconnection</a></li>
             </ul>
         </nav>
     </div>
 
     <div id="barreDeRecherche">
-        <input type="text" id="entrer" placeholder="Entrez votre mot">
+        <input type="text" id="entrer" placeholder="Entrez votre requête">
         <button onclick="Soumettre()"  id="boutonEnvoyer">Soumettre</button>
     </div>
 
@@ -36,6 +36,11 @@
 
     <img src="../img/coqFFE.jpg" alt="" id="coq">
 
+
+    <footer>
+        <p id="gauche">Sassy & Jérémie Cie</p>
+        <p id="droite">Via 2022</p>
+        </footer>
 
 <script src="../js/page2.js"></script>
 
