--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     </div>
 </div>
 
+
+<footer>
+<p id="gauche">Sassy & Jérémie Cie</p>
+<p id="droite">Via 2022</p>
+</footer>
+
 <script src="./assets/js/index.js"></script>
 
 </body>
