--- a/assets/pages/page1.html
+++ b/assets/pages/page1.html
@@ -38,8 +38,13 @@
     <tr>
         <td><input type="text" placeholder="Entrez votre nom" class="renseignements"></td>
         <td><input type="text" placeholder="Entrez votre prénom" class="renseignements"></td>
-        <td><input type="text" placeholder="Entrez date de naissance" class="renseignements"></td>
-        <td><input type="text" placeholder="Entrez votre sexe" class="renseignements"></td>
+        <td><input type="date" placeholder="Entrez date de naissance" class="renseignements"></td>
+        <td> <select name="sexe" id="sexe">
+            <option value="masculin">Masculin</option>
+            <option value="feminin">Féminin</option>
+        </select>
+            <!-- <input type="text" placeholder="Entrez votre sexe" class="renseignements"> -->
+        </td>
         <td><input type="text" placeholder="Entrez votre prescripteur" class="renseignements"></td>
     </tr>
 </table>
