--- a/assets/pages/page1.html
+++ b/assets/pages/page1.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-<h1>Fédération française d'Escrime</h1>
+    <h1>Fédération française d'Escrime</h1>
 </header>
 
 <img id="imageFfe" width="200px"  src="../img/ffe.jpg" alt="">
@@ -18,9 +18,9 @@
 <div>
     <nav>
         <ul class="tableau">
-            <li class="btn"><a href="">Acceuil</a></li>
-            <li class="btn"><a href="">Admin</a></li>
-            <li class="btn"><a href="">Deconnection</a></li>
+            <li class="btn"><a href="#">Acceuil</a></li>
+            <li class="btn"><a href="#">Admin</a></li>
+            <li class="btn"><a href="#">Deconnection</a></li>
         </ul>
     </nav>
 </div>
@@ -35,7 +35,7 @@
         <th>Prescripteur</th>
         </tr>
     </thead>
-    <tr>
+    <tr class="informations">
         <td><input type="text" placeholder="Entrez votre nom" class="renseignements"></td>
         <td><input type="text" placeholder="Entrez votre prénom" class="renseignements"></td>
         <td><input type="date" placeholder="Entrez date de naissance" class="renseignements"></td>
@@ -43,7 +43,6 @@
             <option value="masculin">Masculin</option>
             <option value="feminin">Féminin</option>
         </select>
-            <!-- <input type="text" placeholder="Entrez votre sexe" class="renseignements"> -->
         </td>
         <td><input type="text" placeholder="Entrez votre prescripteur" class="renseignements"></td>
     </tr>
