--- a/assets/pages/page1.html
+++ b/assets/pages/page1.html
@@ -38,7 +38,7 @@
     <tr class="informations">
         <td><input type="text" placeholder="Entrez votre nom" class="renseignements"></td>
         <td><input type="text" placeholder="Entrez votre prénom" class="renseignements"></td>
-        <td><input type="date" placeholder="Entrez date de naissance" class="renseignements"></td>
+        <td><input type="date" placeholder="Entrez date de naissance" class="date"></td>
         <td> <select name="sexe" id="sexe">
             <option value="masculin">Masculin</option>
             <option value="feminin">Féminin</option>
