--- a/assets/pages/page1.html
+++ b/assets/pages/page1.html
@@ -48,13 +48,19 @@
     </tr>
 </table>
 
-<a href="../pages/page2.html"><button onclick="envoyer()" classe="envoyer">Envoyer</button></a>
+<!-- <button onclick="declarer()" classe="declarer">Déclarer</button>
+
+<ul id="liste">   
+</ul> -->
+
+<button onclick="envoyer()" classe="envoyer">Envoyer</button>
 
 
 <img src="../img/PhotoDuel.jpg" alt="" id="duel" width="900px"> 
 
 <footer>
     <p id="gauche">Sassy & Jérémie Cie</p>
+    <a id="mail" href="mailto:adresse@serveur.com">Contact</a>
     <p id="droite">Via 2022</p>
     </footer>
 
