--- a/assets/pages/page2.html
+++ b/assets/pages/page2.html
@@ -39,6 +39,7 @@
 
     <footer>
         <p id="gauche">Sassy & Jérémie Cie</p>
+        <a id="mail" href="mailto:adresse@serveur.com">Contact</a>
         <p id="droite">Via 2022</p>
         </footer>
 
