--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <br>
         <input type="password" placeholder="Entrez votre mot de passe" id="mdp">
         <br>
-        <a href="./assets/pages/page1.html"><button onclick="envoyer()">Envoyer</button></a> 
+        <button onclick="envoyer()">Envoyer</button>
     </div>
 
 
 
 <footer>
 <p id="gauche">Sassy & Jérémie Cie</p>
+<a id="mail" href="mailto:adresse@serveur.com">Contact</a>
 <p id="droite">Via 2022</p>
 </footer>
 
